# cmake_dir

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md  build.bat  build.sh  config.h.in  configure.bat  configure.sh  main.cpp  run.sh
Add/: CMakeLists.txt
Add/include/: add_floats.h
Add/src/: add_floats.cpp
Libraries/: CMakeLists.txt
Libraries/include/: excep.h  library.h
Libraries/src/: excep.cpp  library.cpp
Temp/: CMakeLists.txt
Temp/Include/: temp.h
Temp/src/: temp.cpp
executable/another_level/: CMakeLists.txt
executable/another_level/configure/: configure.h.in
executable/another_level/src/: CMakeLists.txt  main.cpp
executable/something/: CMakeLists.txt
executable/something/configure/: configure.h.in
executable/something/src/: CMakeLists.txt  main.cpp
include/: Cpp_Sandbox.h  configure.h  configure.h.in
main_dir/: CMakeLists.txt
main_dir/configure/: configure.h.in
main_dir/recording/: CMakeLists.txt
main_dir/recording/config_file/: config.h.in
main_dir/recording/src/: CMakeLists.txt  main.cpp
main_dir/src/: CMakeLists.txt  cropping_img.cpp  image_rotation_and_translation.cpp  main.cpp  mouse_tracker.cpp  reading_and_displaying_images.cpp  reading_and_writing_videos.cpp  resizing_images.cpp  scene_configuration.cpp
src/: CMakeLists.txt  main.cpp
