cmake_minimum_required(VERSION 3.19)
project(Cpp_Sandbox VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(USE_EXTERNAL_LIBS "Flag to determine usage of external libraries in project" OFF)
if (USE_EXTERNAL_LIBS)
    set(PROJECT_STATUS "Going with default build configuration")
else()
    set(PROJECT_STATUS "Going with custom build configuration")
endif ()
message(STATUS "Project configured, build information -> ${PROJECT_STATUS}")
configure_file(${CMAKE_SOURCE_DIR}/include/configure.h.in ${CMAKE_SOURCE_DIR}/include/configure.h)
list(APPEND INCLUDE_DIRS "")
add_subdirectory(src)